<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/baseline_people_alt_24"
        android:title="@string/title_contacts" />
    <item
        android:id="@+id/navigation_match"
        android:icon="@drawable/baseline_connect_without_contact_24"
        android:title="@string/desc_match" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile"/>


</menu>